# Compliance_Manager

./: About.txt  DEMO_GUIDE.md  README.md  README_About.md
apps/backend/: 05-verification-guide.md  README.md  compliance.db  pyproject.toml  railway.toml  requirements.txt
apps/backend/src/: main.py
apps/backend/src/api/v1/: __init__.py  routes_admin.py  routes_alerts.py  routes_customers.py  routes_health.py  routes_regulatory.py
apps/backend/src/core/: config.py
apps/backend/src/db/: session.py  types.py
apps/backend/src/integrations/chain/: etherscan.py  evm_provider.py
apps/backend/src/integrations/llm/: client.py
apps/backend/src/models/: __init__.py  alert.py  audit_event.py  baseline.py  customer.py  feedback.py  regulatory_doc.py  rule.py  transaction.py
apps/backend/src/services/: alerts.py  audit.py  customers.py  transactions.py  websocket.py
apps/backend/src/services/anomalies/: scoring.py
apps/backend/src/services/regulatory/: impact.py  ingest.py  sources.py
apps/backend/src/workers/jobs/: stream_chain.py
apps/backend/tests/: test_scoring.py
apps/web/: index.html  package-lock.json  package.json  railway.toml
apps/web/src/: App.tsx  index.css
apps/web/src/app/alerts/: page.tsx
apps/web/src/components/: AlertTable.tsx  GridScan.tsx  LaserFlow.tsx  Layout.tsx  LiveRiskFeed.tsx  NavBar.tsx  RedirectionOverlay.tsx  StaggeredMenu.tsx
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/lib/: api.ts
apps/web/src/pages/: AlertDetail.tsx  Alerts.tsx  CustomerDetail.tsx  Customers.tsx  Home.tsx  Regulatory.tsx
(+1 files in other folders)
